# stock_report

./: .gitignore  README.md  app.py  pyproject.toml
.claude/: CLAUDE.md
bot/: README.md  __init__.py  main.py  news_db.py  news_fetcher.py  news_summarizer.py  storage.py
bot/handlers/: __init__.py  news.py  ticker.py  watchlist.py
bot/jobs/: __init__.py  news_monitor.py  premarket.py
docs/: spec.md  usage.md
src/stocklab/: __init__.py  __main__.py  cli.py  config.py  indicators.py  narrative.py  output.py  router.py
src/stocklab/analysts/: compare.py  stock.py  theme.py
src/stocklab/data/: theme_pool.py  yahoo.py
src/stocklab/render/: renderer.py
src/stocklab/render/templates/: _candle.js.j2  base.html.j2  mode_a.html.j2  mode_b.html.j2  mode_c.html.j2
tests/: test_indicators.py  test_router.py
