[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stocklab"
version = "0.1.0"
description = "Stock Lab — 종목 분석 & 발굴 리포트 생성기 (로컬 Python CLI)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ham", email = "haemin426@gmail.com" }]
dependencies = [
    "yfinance>=0.2.40",
    "pandas>=2.0",
    "numpy>=1.24",
    "jinja2>=3.1",
    "typer>=0.12",
    "httpx>=0.27",
    "selectolax>=0.3.21",
    "anthropic>=0.40",
    "python-dateutil>=2.8",
    "streamlit>=1.35",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-vcr>=1.0",
    "ruff>=0.6",
]

[project.scripts]
stocklab = "stocklab.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
